--- a/DynamicBoard.Application/Components/Routes.razor
+++ b/DynamicBoard.Application/Components/Routes.razor
@@ -1,14 +1,14 @@
-﻿@* <Router AppAssembly="@typeof(Program).Assembly">
+﻿<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(Layout.MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
 </Router>
- *@
 
-<Router AppAssembly="@typeof(Program).Assembly">
+
+@* <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(Layout.Layout2nd)" />
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(Layout.EmptyLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
-</Router>
+</Router> *@
