--- a/DynamicBoard.Application/Views/Chart/ChartView.cshtml
+++ b/DynamicBoard.Application/Views/Chart/ChartView.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "ChartView";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -14,28 +13,32 @@
 <div>
     @if (Model.IsAllowRefresh)
     {
-        <img src="~/images/refresh.png"  onclick="refreshPage()" alt="Refresh" style=" float: right; width: 16px;">
+        <img src="~/images/refresh.png" onclick="refreshPage()" alt="Refresh" style=" float: right; width: 16px;">
     }
 
 
     <img id="loader_@Model.ChartID" class="loader" src="~/images/Spinne.gif" />
 
-    <div id="div_@Model.ChartID" style="display:none">
+    <div id="div_@Model.ChartID" style="display:none;">
         @if (Model.ChartType != "Label")
         {
             <canvas id="canvas_@Model.ChartID"> Chart Canvas </canvas>
         }
         else
-        {   <p>@Model.jsonchartTitle</p>
-            <h1 id="Label_@Model.ChartID"></h1>
+        {
+            <div style="display: flex;justify-content:center;">
+                <p>@Model.jsonchartTitle.Replace("\"", "")</p>
+            </div>
+            <div style="display: flex;justify-content:center;">
+                <h1 id="Label_@Model.ChartID" style="font-style: inherit;text-align: center;"></h1>
+            </div>
         }
 
 
-        
+
     </div>
-    
+
 
 </div>
 
 
-  
