Language parameter aded

--- a/DynamicBoard.Application/Components/Pages/Chart/ChartAdd.razor
+++ b/DynamicBoard.Application/Components/Pages/Chart/ChartAdd.razor
@@ -113,8 +113,9 @@ else
                     
                     <FluentButton Appearance="Appearance.Accent" OnClick="()=>OnOpen()">
                         Add Chart Parameters +
-                    </FluentButton><p style="color:red"> In case of adding Parameters must include 'and  1=1' in you script."</p>
-
+                    </FluentButton>
+                    @* <p style="color:red"> In case of adding Parameters must include 'and  1=1' in you script."</p>
+ *@
 
                 </div>
 
