--- a/SME.DynamicBoard.UI/Components/ChartRenderView.razor
+++ b/SME.DynamicBoard.UI/Components/ChartRenderView.razor
@@ -6,8 +6,10 @@ else
 {
     @if (!string.IsNullOrEmpty(url))
     {
-        <iframe src="@url" style="width: 100%;height: 100%;"></iframe>
+        @*         <iframe src="@url" style="width: 100%;height: 100%;"></iframe>
+ *@
 
+        <iframe src="@url" allowfullscreen style=" position: center;    width: 405px;    height:450px;    border: 0;    overflow: hidden;"></iframe>
     }
 
 }
@@ -18,7 +20,7 @@ else
     [Parameter] public string ChartId { get; set; } = string.Empty;
     [Parameter] public bool IsAllowRefresh { get; set; }
     [Parameter] public bool AutoLoad { get; set; } = true;
-
+    [Parameter] public int Language { get; set; } = 0;
     string url = "";
     bool isError = false;
     string errorMessage;
@@ -102,7 +104,7 @@ else
 
 
                         queryStringParameters = "";
-                        queryStringParameters = "chartID=" + ChartId + "&parameters=[" + parameters + "]&token=" + "UserToken" + "&IsAllowRefresh=" + IsAllowRefresh;
+                        queryStringParameters = "chartID=" + ChartId + "&parameters=[" + parameters + "]&token=" + "UserToken" + "&IsAllowRefresh=" + IsAllowRefresh + "&Language=" + Language;
                         EncryptionHelper.encryptionKey = Storage.EncryptionKey;
                         var encryptedData = EncryptionHelper.Encrypt(queryStringParameters);
                         url = Storage.RootAddress + "/Chart/GetChartEncrypted?Data=" + encryptedData;
