--- a/DynamicBoard.Application/Views/Chart/ChartView.cshtml
+++ b/DynamicBoard.Application/Views/Chart/ChartView.cshtml
@@ -27,10 +27,10 @@
         else
         {
             <div style="display: flex;justify-content:center;">
-                <p>@Model.jsonchartTitle.Replace("\"", "")</p>
+                <h3>@Model.jsonchartTitle.Replace("\"", "")</h3>
             </div>
             <div style="display: flex;justify-content:center;">
-                <h1 id="Label_@Model.ChartID" style="font-style: inherit;text-align: center;"></h1>
+                <h1 style="margin: auto;font-size: 50px;font-style: inherit;text-align: center;" id="Label_@Model.ChartID"></h1>
             </div>
         }
 
