--- a/DynamicBoard.UnitTest/Pages/Index.razor
+++ b/DynamicBoard.UnitTest/Pages/Index.razor
@@ -19,10 +19,10 @@
 <br />
 <br />
 
-<p>Chart View </p>
+@* <p>Chart View </p>
 <SME.DynamicBoard.UI.Components.ChartRenderView @ref="chartRenderView1"  AutoLoad="true" IsAllowRefresh="true" ChartId="4" ChartData="@ChartData" />
-
-@* <div class="card">
+ *@
+<div class="card">
     <div class="card-body">
         <div class="row">
             <div class="col-3">
@@ -75,7 +75,7 @@
         </div>
 
     </div>
-</div> *@
+</div>
 
 @code {
   //  public ChartData ChartDataForNewRequest { get; set; } = new();
