--- a/DynamicBoard.Application/Views/Shared/_Layout.cshtml
+++ b/DynamicBoard.Application/Views/Shared/_Layout.cshtml
@@ -88,6 +88,99 @@
             canvasChartType = "bar";
             Isstacked = true;
         }
+        if (canvasChartType == "doughnut") {
+
+            canvasChartType = "doughnut";
+        }
+        if (canvasChartType == "Pie") {
+
+            canvasChartType = "pie";
+        }
+        if (canvasChartType == "Line") {
+            canvasChartType = "line";
+        }
+        if (canvasChartType == "polarArea") { 
+            canvasChartType = "polarArea";
+
+        } 
+        if (canvasChartType == "RadarChart") {
+            canvasChartType = "radar";
+        }
+        
+        var canvas = 'canvas_' + @Model.ChartID;
+
+        //loadCanvas(@Model.ChartID);
+        var ctx = document.getElementById(canvas).getContext('2d');
+        //debugger
+
+
+        var myChart = new Chart(ctx, {
+            type: canvasChartType,
+            data: {
+                labels: canvasXaxis_labels,//x axis labels
+                datasets: Yaxis_Data_Dataset,
+            },
+            options: {
+                legend: { display: false },
+
+                responsive: true,
+                plugins: {
+                    title: {
+                        display: true,
+                        text: canvasjsonchartTitle
+                    },
+                },
+                responsive: true,
+                interaction: {
+                    intersect: false,
+                },
+                scales: {
+                    x: {
+                        stacked: Isstacked,
+                    },
+                    y: {
+                        stacked: Isstacked
+                    }
+                },
+                title: {
+                    display: true,
+                    text: canvasjsonchartTitle
+                },
+            }
+        });
+
+        // Simulate a delay of 2 seconds before showing the canvas
+        setTimeout(function () {
+            // Show the canvas
+
+            canvasDiv.style.display = "block";
+            // Hide the loader
+            loader.style.display = "none";
+        }, 2000);
+
+    }
+    function LoadChartOLD() {
+        debugger;
+        var RefershTime = '@Model.RefershTime';
+        var canvasChartType = '@Model.ChartType';
+        var canvasXaxis_labels = @Html.Raw(string.IsNullOrEmpty(Model?.JsonXaxis_labels) ? "null" : Model?.JsonXaxis_labels);
+        var configuration = @Html.Raw(string.IsNullOrEmpty(Model?.json_graphConfigurations) ? "null" : Model?.json_graphConfigurations);
+        var canvasjsonchartTitle = '@Html.Raw(string.IsNullOrEmpty(Model?.jsonchartTitle) ? "null" : Model?.jsonchartTitle)';
+        var Yaxis_Data = @Html.Raw(string.IsNullOrEmpty(Model?.json_graphConfigurations) ? "null" : Model?.json_graphConfigurations);
+        var Yaxis_Data_Dataset = Yaxis_Data;//Yaxis_Data[0].datasets;
+
+
+        //debugger
+        var Isstacked = false;
+        var _height = 0;
+
+        if (canvasChartType == "Bar") {
+            canvasChartType = "bar";
+        }
+        if (canvasChartType == "Stacked Bar") {
+            canvasChartType = "bar";
+            Isstacked = true;
+        }
         if (canvasChartType == "Pie") {
 
             canvasChartType = "doughnut";
