Setting Layout of Chart Component

--- a/DynamicBoard.Application/Components/Pages/Chart/Index.razor
+++ b/DynamicBoard.Application/Components/Pages/Chart/Index.razor
@@ -11,8 +11,9 @@
 
 <FluentThemeProvider>
 
-    <div class="container">
-        <div class="row">
+@*     <div class="container">
+ *@
+ <div class="row">
             <div class="col-5 " style="width:20%">
                 <div class="card" style="height: 90vh; overflow: auto;">
 
@@ -87,7 +88,7 @@
                 </div>
             </div>
         </div>
-    </div>
+ @*    </div> *@
 
 </FluentThemeProvider>
 
