--- a/DynamicBoard.Application/Components/Pages/Chart/ChartRenderParameters.razor
+++ b/DynamicBoard.Application/Components/Pages/Chart/ChartRenderParameters.razor
@@ -81,7 +81,7 @@
             }
             <FluentStack HorizontalAlignment="HorizontalAlignment.Right">
 
-                <FluentButton Appearance="Appearance.Accent" OnClick="()=>Preview()" Style="width:30%">
+                <FluentButton Appearance="Appearance.Accent" OnClick="()=>Preview()" >
                     Preview
                 </FluentButton>
             </FluentStack>
